--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 APIFY_TOKEN=your_apify_token_here
 GEMINI_API_KEY=your_gemini_api_key_here
+TELEGRAM_TARGET=-100xxxxxxxxxx
+GITHUB_PROMPT_LIBRARY_URL=https://raw.githubusercontent.com/yangyuwen-bri/seedance-prompt-library/main/data/prompt_library.json
+ENABLE_SYSTEM_CRON_JOB=0
